--- a/Fondecyt-1.html
+++ b/Fondecyt-1.html
@@ -39,7 +39,20 @@ CONSENTIMIENTO INFORMADO
 
 <P>¿Acepta participar en este estudio?</P>
 
+ <style>
+    /* Estilo para todos los botones */
+    button, input[type="button"] {
+      width: 60px;      /* ancho del botón */
+      height: 30px;      /* alto del botón */
+      font-size: 20px;   /* tamaño del texto */
+      margin: 15px;       /* espacio entre botones */
+      cursor: pointer;   /* cambia el cursor al pasar por el botón */
+    }
+  </style>
+
 <a href="javascript:enlaceAleatorio()"><button>SI</button></a>
 
 <P><input type="button" value="NO" onclick="self.close()"></P>
 </BODY>
+
+
