--- a/Fondecyt-1.html
+++ b/Fondecyt-1.html
@@ -17,7 +17,7 @@ CONSENTIMIENTO INFORMADO
 
 <BODY>
 <div style="margin:25px;">
-<P ALIGN = justify>Distinguido Sr. (a) Mi nombre es Rodrigo Landabur Ayala, soy académico, pertenezco al Departamento de Psicología de la Facultad de Humanidades y Educación de la Universidad de Atacama y en esta ocasión me encuentro liderando el proyecto de investigación titulado: “Fusión de identidad con Chile y prejuicio hacia inmigrantes provenientes de Venezuela y Perú”. Este proyecto es patrocinado por el concurso de investigación Fondecyt de Iniciación 2024 de la Asociación Nacional de Investigación y Desarrollo ANID, y tiene una duración inferior a los 25 minutos aproximadamente.</P>
+<P ALIGN = justify>Distinguido(a) Sr.(a) Mi nombre es Rodrigo Landabur Ayala, soy académico, pertenezco al Departamento de Psicología de la Facultad de Humanidades y Educación de la Universidad de Atacama y en esta ocasión me encuentro liderando el proyecto de investigación titulado: “Fusión de identidad con Chile y prejuicio hacia inmigrantes provenientes de Venezuela y Perú”. Este proyecto es patrocinado por el concurso de investigación Fondecyt de Iniciación 2024 de la Asociación Nacional de Investigación y Desarrollo ANID, y tiene una duración inferior a los 25 minutos aproximadamente.</P>
 
 <P ALIGN = justify>El presente estudio, que se realiza en línea, se enfoca en la visión hacia una de las dos poblaciones inmigrantes mencionadas. Aunque hay previos estudios que han analizado la percepción del país y de inmigrantes, el presente busca explorar nuevos aspectos en una de las poblaciones inmigrantes más prevalentes en nuestro país.</P>
 
