--- a/Fondecyt-1.html
+++ b/Fondecyt-1.html
@@ -7,7 +7,7 @@ CONSENTIMIENTO INFORMADO
 
 <script>
         function enlaceAleatorio() {
-            var direcciones = new Array("https://docs.google.com/forms/d/e/1FAIpQLSeWNrjZ2GA3hniBU7ksYEpnpSpxT5pA6GTwD2ZpJxPb5d9HLQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSem0cDgdO-vNpt4rd4LfOySXNwY_s4nGPjK-mqy0I9WXxy2XA/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSepR8BF2Ou09p9syROIs-FgVxW4KQPk5iciBL7E9OcDoXCwBA/viewform?usp=dialog");
+            var direcciones = new Array("https://docs.google.com/forms/d/e/1FAIpQLSeWNrjZ2GA3hniBU7ksYEpnpSpxT5pA6GTwD2ZpJxPb5d9HLQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSem0cDgdO-vNpt4rd4LfOySXNwY_s4nGPjK-mqy0I9WXxy2XA/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSepR8BF2Ou09p9syROIs-FgVxW4KQPk5iciBL7E9OcDoXCwBA/viewform?usp=dialog");
             var aleat = Math.random() * direcciones.length;
             aleat = Math.floor(aleat);
             window.location = direcciones[aleat]
@@ -17,7 +17,7 @@ CONSENTIMIENTO INFORMADO
 
 <BODY>
 <div style="margin:25px;">
-<P ALIGN = justify>Distinguido(a) Sr.(a) Mi nombre es Rodrigo Landabur Ayala, soy académico, pertenezco al Departamento de Psicología de la Facultad de Humanidades y Educación de la Universidad de Atacama y en esta ocasión me encuentro liderando el proyecto de investigación titulado: “Fusión de identidad con Chile y prejuicio hacia inmigrantes provenientes de Venezuela y Perú”. Este proyecto es patrocinado por el concurso de investigación Fondecyt de Iniciación 2024 de la Asociación Nacional de Investigación y Desarrollo ANID, y tiene una duración inferior a los 25 minutos aproximadamente.</P>
+<P ALIGN = justify>Distinguido Sr. (a) Mi nombre es Rodrigo Landabur Ayala, soy académico, pertenezco al Departamento de Psicología de la Facultad de Humanidades y Educación de la Universidad de Atacama y en esta ocasión me encuentro liderando el proyecto de investigación titulado: “Fusión de identidad con Chile y prejuicio hacia inmigrantes provenientes de Venezuela y Perú”. Este proyecto es patrocinado por el concurso de investigación Fondecyt de Iniciación 2024 de la Asociación Nacional de Investigación y Desarrollo ANID, y tiene una duración inferior a los 25 minutos aproximadamente.</P>
 
 <P ALIGN = justify>El presente estudio, que se realiza en línea, se enfoca en la visión hacia una de las dos poblaciones inmigrantes mencionadas. Aunque hay previos estudios que han analizado la percepción del país y de inmigrantes, el presente busca explorar nuevos aspectos en una de las poblaciones inmigrantes más prevalentes en nuestro país.</P>
 
@@ -42,13 +42,14 @@ CONSENTIMIENTO INFORMADO
  <style>
     /* Estilo para todos los botones */
     button, input[type="button"] {
-      width: 70px;      /* ancho del botón */
-      height: 40px;      /* alto del botón */
-      font-size: 30px;   /* tamaño del texto */
+      width: 60px;      /* ancho del botón */
+      height: 20px;      /* alto del botón */
+      font-size: 10px;   /* tamaño del texto */
       margin: 15px;       /* espacio entre botones */
       cursor: pointer;   /* cambia el cursor al pasar por el botón */
     }
   </style>
+
 
 <a href="javascript:enlaceAleatorio()"><button>SI</button></a>
 
