--- a/Fondecyt-1.html
+++ b/Fondecyt-1.html
@@ -7,7 +7,7 @@ CONSENTIMIENTO INFORMADO
 
 <script>
         function enlaceAleatorio() {
-            var direcciones = new Array("https://docs.google.com/forms/d/e/1FAIpQLSeWNrjZ2GA3hniBU7ksYEpnpSpxT5pA6GTwD2ZpJxPb5d9HLQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSem0cDgdO-vNpt4rd4LfOySXNwY_s4nGPjK-mqy0I9WXxy2XA/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSepR8BF2Ou09p9syROIs-FgVxW4KQPk5iciBL7E9OcDoXCwBA/viewform?usp=dialog");
+            var direcciones = new Array("https://docs.google.com/forms/d/e/1FAIpQLSeWNrjZ2GA3hniBU7ksYEpnpSpxT5pA6GTwD2ZpJxPb5d9HLQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSem0cDgdO-vNpt4rd4LfOySXNwY_s4nGPjK-mqy0I9WXxy2XA/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLScamFBv9QYLI41gUlqlcF3-qMlikOE_hSoQgvo-8jjm7liylQ/viewform?usp=dialog", "https://docs.google.com/forms/d/e/1FAIpQLSepR8BF2Ou09p9syROIs-FgVxW4KQPk5iciBL7E9OcDoXCwBA/viewform?usp=dialog");
             var aleat = Math.random() * direcciones.length;
             aleat = Math.floor(aleat);
             window.location = direcciones[aleat]
